--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "google-auth-library": "^10.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
