--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 node_modules
+.env
 
 .env.local
 .env.development.local
@@ -6,3 +7,5 @@ node_modules
 .env.production.local
 
 package-lock.json
+
+my-backend/.env
